--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-streamlit
-tempfile
-os
-google.generativeai
-pydub
-dotenv
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.4
+google-api-core==2.19.0
+google-api-python-client==2.129.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.4
+googleapis-common-protos==1.63.0
+pydub==0.25.1
+streamlit==1.34.0
+
+
