--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,33 @@
+absl-py==2.1.0
+altair==5.3.0
+annotated-types==0.7.0
+asttokens==2.4.0
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2023.5.7
+cffi==1.16.0
+charset-normalizer==3.2.0
+click==8.1.7
+colorama==0.4.6
+comm==0.1.4
+contourpy==1.1.0
+cycler==0.11.0
+debugpy==1.8.0
+decorator==4.4.2
+defusedxml==0.7.1
+docopt==0.6.2
+easyocr==1.7.0
+executing==2.0.0
+fastjsonschema==2.19.1
+ffmpeg-python==0.2.0
+filelock==3.12.2
+flatbuffers==24.3.25
+fonttools==4.41.0
+future==1.0.0
 gitdb==4.0.11
 GitPython==3.1.43
 google-ai-generativelanguage==0.6.4
@@ -7,7 +37,115 @@ google-auth==2.29.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.5.4
 googleapis-common-protos==1.63.0
+grpcio==1.64.0
+grpcio-status==1.62.2
+httplib2==0.22.0
+idna==3.4
+imageio==2.31.1
+imageio-ffmpeg==0.4.9
+ipykernel==6.25.2
+ipython==8.12.3
+jax==0.4.25
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.1
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.4.0
+jupyter_core==5.4.0
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.4
+lazy_loader==0.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mediapipe==0.10.11
+mistune==3.0.2
+ml-dtypes==0.3.2
+moviepy==1.0.1
+mpmath==1.3.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.5.8
+networkx==3.1
+ninja==1.11.1
+numpy==1.25.1
+opencv-contrib-python==4.9.0.80
+opencv-python==4.8.1.78
+opt-einsum==3.3.0
+packaging==23.1
+pandas==2.0.3
+pandocfilters==1.5.1
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==10.0.0
+pipreqs==0.5.0
+platformdirs==3.11.0
+proglog==0.1.10
+prompt-toolkit==3.0.39
+proto-plus==1.23.0
+protobuf==4.25.3
+psutil==5.9.5
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pyclipper==1.3.0.post4
+pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydeck==0.9.1
 pydub==0.25.1
+Pygments==2.16.1
+pyparsing==3.0.9
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+pytz==2023.3
+PyWavelets==1.4.1
+pywin32==306
+PyYAML==6.0
+pyzmq==25.1.1
+referencing==0.35.1
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.1
+rsa==4.9
+scikit-image==0.21.0
+scikit-learn==1.3.0
+scipy==1.11.1
+seaborn==0.12.2
+shapely==2.0.1
+six==1.16.0
+smmap==5.0.1
+sounddevice==0.4.6
+soupsieve==2.5
+SpeechRecognition==3.10.4
+stack-data==0.6.3
 streamlit==1.34.0
-
-
+sympy==1.12
+tenacity==8.3.0
+thop==0.1.1.post2209072238
+threadpoolctl==3.2.0
+tifffile==2023.7.10
+tinycss2==1.3.0
+toml==0.10.2
+toolz==0.12.1
+torch==2.0.1
+torchvision==0.15.2
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.11.2
+typing_extensions==4.7.1
+tzdata==2023.3
+ultralytics==8.0.210
+uritemplate==4.1.1
+urllib3==2.0.3
+watchdog==4.0.0
+wcwidth==0.2.8
+webencodings==0.5.1
+yarg==0.1.9
